<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/main3_bg">

    <TextView
        android:id="@+id/txt_JdlInputPatientPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_jdlInputPatientPage"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="25dp"
        />
    <TextView
        android:id="@+id/txt_JdlNamaPasien"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_nama_pasien"
        android:textSize="25sp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/txt_JdlInputPatientPage"
        app:layout_constraintLeft_toLeftOf="parent"
         />
    <EditText
        android:id="@+id/edt_NamaPasien"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:autofillHints="@string/input_txt_nama_pasien"
        android:hint="@string/input_txt_nama_pasien"
        android:inputType="text"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/txt_JdlNamaPasien"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/txt_UsiaPasien"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_usia_pasien"
        android:textSize="25sp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/edt_NamaPasien"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <EditText
        android:id="@+id/edt_UsiaPasien"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:hint="@string/input_txt_usia_pasien"
        android:autofillHints="@string/input_txt_usia_pasien"
        android:inputType="text"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/txt_UsiaPasien"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/txt_JkPasien"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_jk_pasien"
        android:textSize="25sp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/edt_UsiaPasien"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <RadioGroup
        android:id="@+id/RadioGroupJK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/txt_JkPasien"
        app:layout_constraintLeft_toLeftOf="parent"
        android:checkedButton="@id/jk_laki"
        >
    <RadioButton
        android:id="@+id/jk_laki"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jk_laki_laki"
        android:textSize="20sp"
        />
    <RadioButton
        android:id="@+id/jk_perempuan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jk_perempuan"
        android:textSize="20sp"
        />
    </RadioGroup>

    <TextView
        android:id="@+id/txt_TinggiPasien"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_tinggi_badan_pasien"
        android:textSize="25sp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/RadioGroupJK"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <EditText
        android:id="@+id/edt_TinggiPasien"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:hint="@string/input_txt_tinggi_pasien_cm"
        android:autofillHints="@string/input_txt_tinggi_pasien_cm"
        android:inputType="text"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/txt_TinggiPasien"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/txt_TinggiPasienCM"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/satuan_tinggi_badan_pasien"
        android:textSize="25sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/txt_TinggiPasien"
        app:layout_constraintLeft_toRightOf="@+id/edt_TinggiPasien"
        />

    <TextView
        android:id="@+id/txt_BeratPasien"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_berat_badan_pasien"
        android:textSize="25sp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/edt_TinggiPasien"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <EditText
        android:id="@+id/edt_BeratPasien"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:hint="@string/input_txt_berat_pasien_kg"
        android:autofillHints="input_txt_berat_pasien_kg"
        android:inputType="text"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/txt_BeratPasien"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <TextView
        android:id="@+id/txt_BeratPasienCM"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/satuan_berat_badan_pasien"
        android:textSize="25sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/txt_BeratPasien"
        app:layout_constraintLeft_toRightOf="@+id/edt_BeratPasien"
        />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/btn_txt_next"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@id/edt_BeratPasien"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="10dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>