<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.exsyskotlin.MainActivity"
    android:background="@drawable/main_bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/login_page"
        android:textSize="35sp"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:id="@+id/editUser"
        android:layout_below="@+id/textView"
        android:layout_marginTop="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:hint="@string/hint_enter_username"
        />

    <EditText
        android:id="@+id/editPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editUser"
        android:layout_alignEnd="@+id/editUser"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:hint="@string/hint_enter_password"
        android:inputType="textPassword"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/btn_login"
        android:id="@+id/btnLogin"
        android:layout_below="@+id/editPass"
        android:layout_alignStart="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:background="@drawable/app_background"
        android:layout_margin="50dp"
        />

</RelativeLayout>




