<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/main_bg">

    <androidx.cardview.widget.CardView
        android:id="@+id/CardViewDiagnosis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        app:cardBackgroundColor="@color/colorGrey"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/icon_diagnosis"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/img_mulai_diagnosis"
            android:src="@drawable/baseline_coronavirus_black_18dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/text_icon_diagnosis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/img_txt_mulai_diagnosis"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@id/icon_diagnosis"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/CardViewLihatData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/CardViewDiagnosis"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        app:cardBackgroundColor="@color/colorGrey"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/icon_lihatdata"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:contentDescription="@string/img_lihat_data"
                android:src="@drawable/baseline_rule_black_18dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />

            <TextView
                android:id="@+id/text_icon_lihatdata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/img_txt_lihat_data"
                android:textSize="25sp"
                app:layout_constraintTop_toBottomOf="@id/icon_lihatdata"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnLogout"
        android:text="@string/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/CardViewLihatData"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/app_background"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
