<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/main4_bg">

    <TextView
        android:id="@+id/txt_JdlData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_JdlDataPage"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/txt_JdlData"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:listitem="@layout/item_data_page"
        >

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/btnExportData"
        android:text="@string/txt_export_data"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/recyclerview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/app_background"
        android:layout_margin="10dp"
        />

    <Button
        android:id="@+id/btnKembaliMenu2"
        android:text="@string/txt_kembali_menu_utama"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/btnExportData"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/app_background"
        android:layout_margin="50dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>